[gd_scene load_steps=10 format=2]

[ext_resource path="res://ex/ico/mater/ico_m_cry.png" type="Texture" id=1]
[ext_resource path="res://tscn/tile/logo_zh_CN.png" type="Texture" id=2]
[ext_resource path="res://res/Gui/UiElements/Big_flag_logo.png" type="Texture" id=3]
[ext_resource path="res://tscn/tile/bg/Background_8K.png" type="Texture" id=4]
[ext_resource path="res://tscn/tile/tile.gd" type="Script" id=5]
[ext_resource path="res://res/font/b.tres" type="DynamicFont" id=7]
[ext_resource path="res://res/Gui/UiElements/Little_shadow.png" type="Texture" id=9]
[ext_resource path="res://res/Gui/UiElements/Little_shadow_d.png" type="Texture" id=10]
[ext_resource path="res://res/Gui/UiElements/Options_pin.png" type="Texture" id=11]

[node name="tile" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 72.96
texture = ExtResource( 4 )
expand = true

[node name="LittleShadowD2" type="Sprite" parent="."]
position = Vector2( 757.5, 236.592 )
scale = Vector2( 0.777344, 9.03302 )
texture = ExtResource( 10 )

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
margin_left = 670.0
margin_top = -8.0
margin_right = 845.0
margin_bottom = 451.0
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.5
margin_top = -155.5
margin_right = 72.5
margin_bottom = 199.5
alignment = 1

[node name="Button4" type="Button" parent="NinePatchRect2/VBoxContainer"]
show_behind_parent = true
margin_top = 92.0
margin_right = 145.0
margin_bottom = 123.0
rect_min_size = Vector2( 0, 30 )
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
custom_fonts/font = ExtResource( 7 )
text = "继续"

[node name="Button1" type="Button" parent="NinePatchRect2/VBoxContainer"]
show_behind_parent = true
margin_top = 127.0
margin_right = 145.0
margin_bottom = 158.0
rect_min_size = Vector2( 0, 30 )
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
custom_fonts/font = ExtResource( 7 )
text = "新游戏"

[node name="book" type="Button" parent="NinePatchRect2/VBoxContainer"]
show_behind_parent = true
margin_top = 162.0
margin_right = 145.0
margin_bottom = 193.0
rect_min_size = Vector2( 0, 30 )
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
custom_fonts/font = ExtResource( 7 )
text = "解锁"

[node name="OptionsPin2" type="Sprite" parent="NinePatchRect2/VBoxContainer/book"]
position = Vector2( 126.5, 15.5 )
scale = Vector2( 0.257813, 0.257812 )
texture = ExtResource( 11 )

[node name="IcoMCry" type="Sprite" parent="NinePatchRect2/VBoxContainer/book/OptionsPin2"]
position = Vector2( 1.93945, -1.93939 )
scale = Vector2( 0.969697, 0.969697 )
texture = ExtResource( 1 )

[node name="Button2" type="Button" parent="NinePatchRect2/VBoxContainer"]
show_behind_parent = true
margin_top = 197.0
margin_right = 145.0
margin_bottom = 228.0
rect_min_size = Vector2( 0, 30 )
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
custom_fonts/font = ExtResource( 7 )
text = "设置"

[node name="Button3" type="Button" parent="NinePatchRect2/VBoxContainer"]
show_behind_parent = true
margin_top = 232.0
margin_right = 145.0
margin_bottom = 263.0
rect_min_size = Vector2( 0, 30 )
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
custom_fonts/font = ExtResource( 7 )
text = "退出"

[node name="LittleShadowD" type="Sprite" parent="."]
visible = false
position = Vector2( 794.526, 88.9502 )
rotation = 1.5708
scale = Vector2( 0.261751, 3.82544 )
texture = ExtResource( 9 )

[node name="logo" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 53.0
margin_top = 4.0
margin_right = 490.0
margin_bottom = 196.0
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="demo" type="Label" parent="."]
margin_left = 823.0
margin_top = 442.0
margin_right = 947.0
margin_bottom = 464.0
text = "试玩版"
align = 2

[node name="Label" type="Label" parent="."]
margin_left = 24.0
margin_top = 386.0
margin_right = 184.0
margin_bottom = 424.0
text = "语言："

[node name="OptionButton" type="OptionButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -62.0001
margin_right = 171.0
margin_bottom = -24.0
text = "简体中文"
items = [ "简体中文", null, false, 0, null, "English", null, false, 1, null, "繁体中文", null, false, 2, null, "日本語", null, false, 3, null ]
selected = 0

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="modBtn" type="Button" parent="."]
visible = false
margin_left = 22.0
margin_top = 30.0
margin_right = 138.0
margin_bottom = 68.0
text = "Mod工具"

[connection signal="tree_exiting" from="." to="." method="_on_tile_tree_exiting"]
[connection signal="pressed" from="NinePatchRect2/VBoxContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="NinePatchRect2/VBoxContainer/Button1" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="NinePatchRect2/VBoxContainer/book" to="." method="_on_book_pressed"]
[connection signal="pressed" from="NinePatchRect2/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="NinePatchRect2/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="modBtn" to="." method="_on_modBtn_pressed"]
